--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase-functions": "^4.4.1",
-    "firebase-admin": "^11.10.1"
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^4.4.1"
   }
 }
